--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ h3 {
   margin: 0 0 10px;
 }
 
-p { 
+p {
   font-size: 1em; /* 16px, ?pt, 100%, 1em */
   line-height: 1.5em;
 }
@@ -22,6 +22,7 @@ figcaption {
   text-align: right;
 }
 
+
 .milk-text {
   font: bold 2.6em 'Elsie Swash Caps', cursive;
   color: white;
@@ -31,8 +32,15 @@ figcaption {
 
 
 /*////////// BACKGROUNDS //////////*/
-
-
+background: -webkit-gradient(
+  linear,
+  left top,
+  left bottom,
+  color-stop(0%, #efefef),
+  color-stop(24%, #ffffff),
+  color-stop(68%, #ffffff),
+  color-stop(100%, #dddddd)
+); /*
 
 /*/////// MEDIA ////////*/
 
@@ -161,5 +169,3 @@ section {
 }
 
 /*////////// FOOTER //////////*/
-
-
