Automatically backed up by Learn

--- a/css/style.css
+++ b/css/style.css
@@ -168,4 +168,9 @@ section {
   color: red;
 }
 
+/*/////////// MEDIA ////////*/
+
+img, video, audio {
+  max-width: 100%;
+}
 /*////////// FOOTER //////////*/
